--- a/app/Resources/views/admin/index.html.twig
+++ b/app/Resources/views/admin/index.html.twig
@@ -15,40 +15,40 @@
             <div class="container">
                 <a href="/" id="logo"><img src="{{ asset('img/crystal-white.png') }}" alt="Logo"></a>
                 <ul class="admin-menu">
-                    <li><a href="#">Articles</a>
+                    <li><a href="#">Новини</a>
                         <ul class="sub-menu">
-                            <li><a href="/admin/article/new">Add New</a></li>
-                            <li><a href="/admin/articles/1">All Articles</a></li>
+                            <li><a href="/admin/article/new">Додати новину</a></li>
+                            <li><a href="/admin/articles/1">Всі новини</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Comments</a>
+                    <li><a href="#">Коментарі</a>
                         <ul class="sub-menu">
-                            <li><a href="/admin/comment/new">Add New</a></li>
-                            <li><a href="/admin/comments/1">All Comments</a></li>
+                            <li><a href="/admin/comment/new">Додати коментар</a></li>
+                            <li><a href="/admin/comments/1">Всі коментарі</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Pages</a>
+                    <li><a href="#">Сторінки</a>
                         <ul class="sub-menu">
-                            <li><a href="/admin/page/new">Add New</a></li>
-                            <li><a href="/admin/pages/1">All Pages</a></li>
+                            <li><a href="/admin/page/new">Додати сторінку</a></li>
+                            <li><a href="/admin/pages/1">Всі сторінки</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Users</a>
+                    <li><a href="#">Користувачі</a>
                         <ul class="sub-menu">
-                            <li><a href="/admin/user/new">Add New</a></li>
-                            <li><a href="/admin/users/1">All Users</a></li>
+                            <li><a href="/admin/user/new">Додати користувача</a></li>
+                            <li><a href="/admin/users/1">Всі користувачі</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Images</a>
+                    <li><a href="#">Картинки</a>
                         <ul class="sub-menu">
-                            <li><a href="/admin/image/new">Add New</a></li>
-                            <li><a href="/admin/images/1">All Images</a></li>
+                            <li><a href="/admin/image/new">Додати картинку</a></li>
+                            <li><a href="/admin/images/1">Всі картинки</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Categories</a>
+                    <li><a href="#">Категорії</a>
                         <ul class="sub-menu">
-                            <li><a href="/admin/category/new">Add New</a></li>
-                            <li><a href="/admin/categories/1">All Categories</a></li>
+                            <li><a href="/admin/category/new">Додати категорію</a></li>
+                            <li><a href="/admin/categories/1">Всі категорії</a></li>
                         </ul>
                     </li>
                 </ul>
