--- a/app/Resources/views/admin/all_comments.html.twig
+++ b/app/Resources/views/admin/all_comments.html.twig
@@ -6,9 +6,9 @@
     <table class="table table-hover">
         <thead>
         <th>#</th>
-        <th>Article</th>
-        <th>Message</th>
-        <th>Options</th>
+        <th>Новина/Сторінка</th>
+        <th>Коментар</th>
+        <th>Опції</th>
         </thead>
         <tbody>
         {% for comment in comments %}
@@ -17,7 +17,7 @@
                 <td>{{ comment.article.title }}</td>
                 <td>{{ comment.message }}</td>
                 <td>
-                    <a href="/admin/comment/{{ comment.id }}/edit" class="btn btn-default">Edit</a>
+                    <a href="/admin/comment/{{ comment.id }}/edit" class="btn btn-default">Редагувати</a>
                     {#<a href="#" class="btn btn-danger">Delete</a>#}
                 </td>
             </tr>
