--- a/app/Resources/views/admin/all_images.html.twig
+++ b/app/Resources/views/admin/all_images.html.twig
@@ -6,8 +6,8 @@
     <table class="table table-hover">
         <thead>
         <th>#</th>
-        <th>Title</th>
-        <th>Options</th>
+        <th>Заголовок</th>
+        <th>Опції</th>
         </thead>
         <tbody>
         {% for image in images %}
