--- a/app/Resources/views/admin/all_pages.html.twig
+++ b/app/Resources/views/admin/all_pages.html.twig
@@ -6,8 +6,8 @@
     <table class="table table-hover">
         <thead>
         <th>#</th>
-        <th>Title</th>
-        <th>Options</th>
+        <th>Заголовок</th>
+        <th>Опції</th>
         </thead>
         <tbody>
         {% for page in pages %}
@@ -15,7 +15,7 @@
                 <td>{{ page.id }}</td>
                 <td>{{ page.title }}</td>
                 <td>
-                    <a href="/admin/page/{{ page.id }}/edit" class="btn btn-default">Edit</a>
+                    <a href="/admin/page/{{ page.id }}/edit" class="btn btn-default">Редагувати</a>
                     {#<a href="#" class="btn btn-danger">Delete</a>#}
                 </td>
             </tr>
