--- a/app/Resources/views/admin/all_articles.html.twig
+++ b/app/Resources/views/admin/all_articles.html.twig
@@ -15,7 +15,7 @@
                 <td>{{ article.id }}</td>
                 <td>{{ article.title }}</td>
                 <td>
-                    <a href="/admin/article/{{ article.id }}/edit" class="btn btn-default">Редагувати</a>
+                    <a href="{{ path('edit_article', {"id": article.id}) }}" class="btn btn-default">Редагувати</a>
                     {#<a href="/admin/article/{{ article.id }}/delete" class="btn btn-danger">Delete</a>#}
                 </td>
             </tr>
@@ -34,7 +34,7 @@
                             <li><span class="page-numbers current"><span class="num">{{ page }}</span></span>
                             </li>
                         {% else %}
-                            <li><a class="page-numbers" href="/admin/articles/{{ page }}">
+                            <li><a class="page-numbers" href="{{ path('admin_articles', {"page" : page}) }}">
                                     <span class="num">{{ page }}</span></a></li>
                         {% endif %}
                     {% endfor %}
