--- a/app/Resources/views/admin/all_categories.html.twig
+++ b/app/Resources/views/admin/all_categories.html.twig
@@ -15,7 +15,7 @@
                 <td>{{ category.id }}</td>
                 <td>{{ category.name }}</td>
                 <td>
-                    <a href="/admin/category/{{ category.id }}/edit" class="btn btn-default">Edit</a>
+                    <a href="{{ path('edit_category', {"id" : category.id}) }}" class="btn btn-default">Редагувати</a>
                     {#<a href="#" class="btn btn-danger">Delete</a>#}
                 </td>
             </tr>
