--- a/app/Resources/views/admin/all_comments.html.twig
+++ b/app/Resources/views/admin/all_comments.html.twig
@@ -17,7 +17,7 @@
                 <td>{{ comment.article.title }}</td>
                 <td>{{ comment.message }}</td>
                 <td>
-                    <a href="/admin/comment/{{ comment.id }}/edit" class="btn btn-default">Редагувати</a>
+                    <a href="{{ path('edit_comment', {"id" : comment.id}) }}" class="btn btn-default">Редагувати</a>
                     {#<a href="#" class="btn btn-danger">Delete</a>#}
                 </td>
             </tr>
