--- a/app/Resources/views/admin/all_images.html.twig
+++ b/app/Resources/views/admin/all_images.html.twig
@@ -15,7 +15,7 @@
                 <td>{{ image.id }}</td>
                 <td class="image"><img src="{{ asset("uploads/") }}{{ image.path }}" alt=""></td>
                 <td>
-                    <a href="/admin/image/{{ image.id }}/edit" class="btn btn-default">Edit</a>
+                    <a href="{{ path('edit_image', {"id" : image.id}) }}" class="btn btn-default">Редагувати</a>
                     {#<a href="#" class="btn btn-danger">Delete</a>#}
                 </td>
             </tr>
