--- a/app/Resources/views/admin/all_pages.html.twig
+++ b/app/Resources/views/admin/all_pages.html.twig
@@ -15,7 +15,7 @@
                 <td>{{ page.id }}</td>
                 <td>{{ page.title }}</td>
                 <td>
-                    <a href="/admin/page/{{ page.id }}/edit" class="btn btn-default">Редагувати</a>
+                    <a href="{{ path('edit_page', {"id" : page.id}) }}" class="btn btn-default">Редагувати</a>
                     {#<a href="#" class="btn btn-danger">Delete</a>#}
                 </td>
             </tr>
