--- a/app/Resources/views/admin/all_users.html.twig
+++ b/app/Resources/views/admin/all_users.html.twig
@@ -17,7 +17,7 @@
                 <td>{{ user.firstName }}</td>
                 <td>{{ user.lastName }}</td>
                 <td>
-                    <a href="/admin/user/{{ user.id }}/edit" class="btn btn-default">Редагувати</a>
+                    <a href="{{ path('edit_user', {"id" : user.id}) }}" class="btn btn-default">Редагувати</a>
                     {#<a href="/admin/article/{{ article.id }}/delete" class="btn btn-danger">Delete</a>#}
                 </td>
             </tr>
