--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,128 +1,175 @@
-{% extends 'base.html.twig' %}
+<!DOCTYPE html>
+<html lang="ru">
 
-    {% block slider %}
-        <div id="slider">
-            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="description" content="The Page Description">
+    <style type="text/css">@-ms-viewport{width: device-width;}</style>
+    <title>Esthetic Journal - Головна Сторінка</title>
+    <link rel="stylesheet" href="css/layers.min.css" media="screen">
+    <link rel="stylesheet" href="css/font-awesome.min.css" media="screen">
+    <link rel="stylesheet" href="css/style-frontend.css" media="screen">
+    <link href='http://fonts.googleapis.com/css?family=Proxi:400,700|Open+Sans:400italic,700italic,400,700' rel='stylesheet' type='text/css'>
 
-                <!-- Wrapper for slides -->
-                <div class="carousel-inner" role="listbox">
-                    {% for slide in slides %}
-                        {#<div class="item {% if loop.first %}active{% endif %}" style="background-image: url('{{ asset('uploads/') }}{{ slide.image.path }}')">#}
-                        {#FOR FIXTURES#}
-                        <div class="item {% if loop.first %}active{% endif %}" style="background-image: url('{{ slide.image.path }}')">
-                            {#FOR FIXTURES#}
-                            <div class="dark-shadow">
-                                <div class="carousel-caption">
-                                    <div class="container">
-                                        <a class="category" href="/{{ path('category', { "slug" : slide.categories.slug }, true) }}">
-                                            <i class="fa fa-{{ slide.categories.class }}"></i> {{ slide.categories.name }}
-                                        </a>
+</head>
 
-                                        <a href="/article/{{ slide.slug }}"><h3>{{ slide.title }}</h3></a>
+<body class="page">
 
-                                        <p>{{ slide.description }}</p>
-                                        <hr>
-                                        <ul class="meta_data">
-                                            <li class="author">
-                                                <a class="url fn" href="/{{ path("user", { "slug" : slide.users.slug }, true) }}"><span class="fa fa-user"></span>{{ slide.users.firstName }}</a>
-                                            </li>
-                                            <li class="time">
-                                                <time class="value updated" datetime="2012-08-20">
-                                                    <span class="fa fa-calendar-o"></span>August 20, 2012
-                                                </time>
-                                            </li>
-                                            <li class="comment">
-                                                <a href="/"><span class="fa fa-comment-o"></span>{{ slide.comments|length }}</a>
-                                            </li>
-                                            <li class="like">
-                                        <span class="like" data-post_id="20">
-                                            <span class="fa fa-heart-o"></span>
-                                            <span class="count">{{ slide.likes|length }}</span>
-                                        </span>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    {% endfor %}
+<header role="banner" class="transparent light">
+    <div class="row">
+        <div class="nav-inner row-content buffer-left buffer-right even clear-after">
+            <div id="brand">
+                <h1 class="reset"><!--<img src="img/logo.png" alt="logo">--><a href="index.html">Esthetic Journal</a></h1>
+            </div><!-- brand -->
+            <a id="menu-toggle" href="#"><i class="fa fa-bars fa-lg"></i></a>
+            <nav>
+                <ul class="reset" role="navigation">
+                    <li class="menu-item">
+                        <a href="index.html">Головна</a>
+                        <ul class="sub-menu">
+                            <li><a href="#">1</a></li>
+                            <li><a href="#">2</a></li>
+                            <li><a href="#">3</a></li>
+                        </ul>
+                    </li>
+                    <li class="menu-item">
+                        <a href="news.html">Новини</a>
+                        <ul class="sub-menu">
+                            <li><a href="#">1</a></li>
+                            <li><a href="#">2</a></li>
+                            <li><a href="#">3</a></li>
+                            <li><a href="#">4</a></li>
+                            <li><a href="#">5</a></li>
+                            <li><a href="#">6</a></li>
+                        </ul>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#">Відео</a>
+                        <ul class="sub-menu">
+                            <li><a href="#">1</a></li>
+                            <li><a href="#">2</a></li>
+                            <li><a href="#">3</a></li>
+                            <li><a href="#">4</a></li>
+                        </ul>
+                    </li>
+                    <li class="menu-item"><a href="#">Про нас</a></li>
+                    <li class="menu-item"><a href="#">Пошук</a></li>
+                    <li class="menu-item"><a href="#">Контакти</a></li>
+                </ul>
+            </nav>
+        </div><!-- row-content -->
+    </div><!-- row -->
+</header>
+
+<main role="main">
+    <div id="intro-wrap">
+        <div id="intro" class="preload darken" data-autoplay="5000" data-navigation="true" data-pagination="true" data-transition="fadeUp">
+            {% for slide in slides %}
+                <div class="intro-item" style="background-image: url({{ slide.image.path }});">
+                    <div class="caption">
+                        <h2>{{ slide.title }}</h2>
+                        <p>{{ slide.description }}</p>
+                        <a class="button white transparent" href="{{ path('article', {"slug": slide.slug}) }}">Читати</a>
+                    </div><!-- caption -->
+                    {#<div class="photocaption">#}
+                        {#<h4>Фото зробив: <a href="http://vk.com/awaylastdays">Vadim Bruklia</a></h4>#}
+                    {#</div><!-- photocaption -->#}
                 </div>
-
-                <!-- Left and right controls -->
-                <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-        </div>
-    {% endblock %}
-
-    {% block content %}
-        <div class="content">
-
-            {% for article in articles %}
-                    <div class="item-block col col-lg-4">
-                        <div class="inner">
-                            {#<div class="img" style="background-image: url('{{ asset('uploads/') }}{{ article.image.path }}')"></div>#}
-                            {# FOR FIXTURES #}
-                            <div class="img" style="background-image: url('{{ article.image.path }}')"></div>
-                            {# FOR FIXTURES #}
-                            <div class="inner-text">
-                                <a class="category" href="/{{ path('category', { 'slug' : article.categories.slug }, true) }}/1">
-                                    <i class="fa fa-{{ article.categories.class }}"></i> {{ article.categories.name }}
-                                </a>
-                                <a class="title" href="/article/{{ article.slug }}">{{ article.title }}</a>
-
-                                <p class="desc">{{ article.description }}...</p>
-
-                                <div class="item-footer">
-                                    <hr>
-                                    <ul class="meta_data">
-                                        <li class="author">
-                                            <a class="url fn" href="/{{ path("user", { "slug" : article.users.slug }, true) }}">
-                                                <span class="fa fa-user"></span>{{ article.users.firstName }}
-                                            </a>
-                                        </li>
-                                        <li class="comment">
-                                            <a href="/"><span class="fa fa-comment-o"></span>{{ article.comments|length }}</a>
-                                        </li>
-                                        <li class="like">
-                                            <span class="post-like">
-                                                <span class="fa fa-heart-o"></span>
-                                                <span class="count">{{ article.likes|length }}</span>
-                                            </span>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
             {% endfor %}
-        </div>
+        </div><!-- intro -->
+    </div><!-- intro-wrap -->
 
-        <div id="pagination">
-                <div class="">
-                    <ul class="pagination">
-                        {% if articles|length / 9 > 1 %}
-                            {% for page in 1..articles|length / 9 + 1 %}
-                                {% if page == current %}
-                                    <li><span class="page-numbers current"><span class="num">{{ page }}</span></span></li>
-                                {% else %}
-                                    <li><a class="page-numbers" href="/page/{{ page }}"><span class="num">{{ page }}</span></a></li>
-                                {% endif %}
-                            {% endfor %}
-                        {% endif %}
+    <div id="main">
+
+        <section class="row section">
+            <div class="row-content buffer even clear-after">
+                <div class="section-title"><h3>Останні новини</h3></div>
+                <div class="grid-items blog-section masonry-style preload">
+                    {#<article class="item column six">#}
+                        {#<a href="#">#}
+                            {#<figure><img src="img/vsco_011715.jpg" alt=""><span class="blog-overlay"><i class="icon icon-doc"></i></span></figure>#}
+                            {#<div class="blog-excerpt">#}
+                                {#<div class="blog-excerpt-inner">#}
+                                    {#<h5 class="meta-post">Люди</h5>#}
+                                    {#<h2>Интервью с Вадимом Брыклей</h2>#}
+                                {#</div><!-- blog-excerpt -->#}
+                            {#</div><!-- blog-excerpt-inner -->#}
+                        {#</a>#}
+                    {#</article>#}
+                    {% for article in articles %}
+                        <article class="item column {% if loop.index == 1 %} six {% elseif loop.index == 6 %} six {% else %} three {% endif %}">
+                            <a href="{{ path('article', {"slug" : article.slug}) }}">
+                                <figure><img src="{{ article.image.path }}" alt=""><span class="blog-overlay"><i class="icon icon-doc"></i></span></figure>
+                                <div class="blog-excerpt">
+                                    <div class="blog-excerpt-inner">
+                                        <h5 class="meta-post">{{ article.categories.name }}</h5>
+                                        <h2>{{ article.title }}</h2>
+                                        <p></p>
+                                    </div><!-- blog-excerpt-inner -->
+                                </div><!-- blog-excerpt -->
+                            </a>
+                        </article>
+                    {% endfor %}
+
+                    <div class="shuffle-sizer three"></div>
+                </div><!-- grid-items -->
+                <div class="more-btn"><a class="button transparent aqua" href="{{ path('blog', {"number" : 1}) }}">Читати всі новини</a></div>
+            </div>
+        </section>
+
+        <section class="row section">
+            <div class="map" data-maplat="49.445773" data-maplon="32.062016" data-mapzoom="17" data-color="" data-height="22.222" data-img="img/marker.png" data-info="Мы находимся в Черкассах"></div>
+        </section>
+
+    </div><!-- id-main -->
+</main><!-- main -->
+
+<footer role="contentinfo">
+    <div class="row">
+        <div class="row-content buffer clear-after">
+            <section id="top-footer">
+                <div class="widget column three"><!-- widget-->
+                    <h4>Меню</h4>
+                    <ul class="plain">
+                        <li><a href="#">Головна</a></li>
+                        <li><a href="#">Новини</a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#">Контакти</a></li>
                     </ul>
                 </div>
-        </div>
+                <div class="widget column three">
+                    <h4>Архіви</h4>
+                    <ul class="plain">
+                        <li><a href="#">2016</a></li>
+                        <li><a href="#">2016</a></li>
+                        <li><a href="#">2016</a></li>
+                        <li><a href="#">2016</a></li>
+                        <li><a href="#">2016</a></li>
+                    </ul>
+                </div>
+                <div class="widget meta-social column three">
+                    <h4>Слідкуйте за нами</h4>
+                    <ul class="inline">
+                        <li><a href="#" class="twitter-share border-box"><i class="fa fa-twitter fa-lg"></i></a></li>
+                        <li><a href="#" class="facebook-share border-box"><i class="fa fa-facebook fa-lg"></i></a></li>
+                        <li><a href="#" class="vk-share border-box"><i class="fa fa-vk fa-lg"></i></a></li>
+                    </ul>
+                </div>
+            </section><!-- top-footer -->
+            <section id="bottom-footer">
+                <p class="keep-left">&copy; 2016 <a href="http://vk.com/awaylastdays" alt="AwayLastDays">AwayLastDays</a>. All Rights Reserved.</p>
+            </section><!-- bottom-footer -->
+        </div><!-- row-content -->
+    </div><!-- row -->
+</footer>
 
+<script src="https://code.jquery.com/jquery.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
+<script src="{{ asset('js/plugins.js') }}"></script>
+<script src="{{ asset('js/alpha.js') }}"></script>
 
-    {% endblock content %}
+</body>
 
-
-
-
+</html>
