add login social

--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -18,4 +18,10 @@
         <button type="submit" class="btn btn-default">login</button>
     </form>
 
+    <a href="http://journal.local/app_dev.php/connect/facebook">facebook</a>
+    <br>
+    <a href="http://journal.com/app_dev.php/connect/google">google</a>
+    <br>
+    <a href="http://journal.com/app_dev.php/connect/vkontakte">vkontakte</a>
+
 {% endblock content %}
