add custom user provider

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -81,7 +81,7 @@
     </div><!-- intro-wrap -->
 
     <div id="main">
-
+{{ dump(app.user) }}
         <section class="row section">
             <div class="row-content buffer even clear-after">
                 <div class="section-title"><h3>Останні новини</h3></div>
